aggiunto il plugin maven shade per creare fat jar e modificati i file docker-compose e dockerfile per cercare di far funzionare l'applicazione containerizzata: mysql funziona, l'applicazione invece non riesce a vedere javafx e quindi ancora non riesce a partire